welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
	golomb(0)=0
        ^golomb:5: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
	golomb(1)=1
        ^golomb:7: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
		golomb(i+g)=g
                ^golomb:6: error: type mismatch;
 found   : Unit
 required: Int
	for (i<-1 to c) {
              ^