welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var c=1
	var g=1
	golomb(0)=0
	golomb(1)=1
	for (i<-1 to c) {
		golomb(i+g)=g
	}
}